Prevent dropping of a UDF used inside a generated col expression
UDFs which are used inside any generated column expression must
not be able to be dropped, otherwise the table info fails on
resolving, making the table unusable.